<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="done_label">Done</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected"><xliff:g id="item" example="2013">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="radial_numbers_typeface">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="sans_serif">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="day_of_week_label_typeface">sans-serif</string>
    
       <string name="app_name">Meal Pal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
     <string-array name="solids">
        <item>Meal</item>
        <item>Snack</item>
    </string-array>
    <string-array name="liquids">
        <item >Water</item>
        <item >Other</item>
    </string-array>
    <string-array name="liquid_measurements">
        <item >Cup</item>
        <item >Pint</item>
        <item >Quart</item>
    </string-array>
    <string name="submit">SUBMIT</string>
    <string name="welcome">WELCOME</string>
    <string name="food">ADD FOOD</string>
    <string name="liquid">ADD LIQUID</string>
    <string name="view_today">VIEW\nONE\nDAY</string>
    <string name="custom_day">View Entry from a Previous Day</string>
    <string name="view_week">View this Week</string>
    <string name="view_custom_week">VIEW\nA\nWEEK</string>
    <string name="meal">meal</string>
    <string name="snack">snack</string>
    <string name="optional_description">Otional Description...</string>
    <string name="description">Description...</string>
    <string name="today">Today</string>
    <string name="place_holder">PlaceH</string>
    <string-array name="view_type_spinner">
        <item >All</item>
        <item >Food</item>
        <item >Liquid</item>
    </string-array>
    
</resources>
