<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/layout_view_content_main"
        android:name="org.hierro.mealpal.activity.ViewFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white" >

    </FrameLayout>

    <Button
        android:id="@+id/btn_viewAnyWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_viewToday"
        android:layout_below="@+id/btn_viewToday"
        android:layout_weight="0"
        android:background="@color/blue_dark"
        android:text="@string/view_custom_week"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:showDividers="middle" >

        <Button
            android:id="@+id/btn_addSolid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green_dark"
            android:padding="16dp"
            android:text="@string/food"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="normal"
            android:typeface="normal" />

        <Button
            android:id="@+id/btn_addLiquid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_light"
            android:padding="16dp"
            android:text="@string/liquid"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="normal"
            android:typeface="normal" />

    </LinearLayout>

</LinearLayout>