<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnliquid_select_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/place_holder"
            style="@android:style/Widget.Holo.Light.Spinner" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0" />

        <Spinner
            android:id="@+id/liquid_selectionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/liquids" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:gravity="center" >

        <EditText
            android:id="@+id/liquid_numInput"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:ems="2"
            android:inputType="number" 
            android:maxLength="2" />

        <Spinner
            android:id="@+id/liquid_measureSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:entries="@array/liquid_measurements" />

    </LinearLayout>

    <EditText
        android:id="@+id/liquid_addDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/liquid_measureSpinner"
        android:ems="10"
        android:hint="@string/optional_description"
        android:inputType="textMultiLine"
        >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_submit_liquid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>
